Fix Bug 1414107: Sticky TOC and mobile collapsed
- Move TOC to below document title
- Add sticky TOC styles
- Add JS improve TOC user experience
    - Scrolling to anchor links accounts for height of TOC
    - Don't make TOC sticky if it's too big
    - Don't show TOC if the screen is too small
- Collapse sections by default on mobile
    - open by default if user arrives via an anchor link
- Change code block formatting to avoid FOUT on <pre> blocks (the page
  should jump around less when Prism loads now)

--- a/kuma/static/styles/components/structure/nav-access.scss
+++ b/kuma/static/styles/components/structure/nav-access.scss
@@ -6,7 +6,7 @@ Keyboard & screen reader skip link menu
     width: 100%;
     position: absolute;
     top: -20em;
-    z-index: 1001;
+    z-index: $nav-access-z;
 
     a {
         @include rgba-fallback(background, #fff, .9);
